# Detours

./: .gitignore  CMakeLists.txt
samples/: CMakeLists.txt
samples/member/: CMakeLists.txt  member.x64.cpp
samples/profiler/: CMakeLists.txt  payload.cpp  profiler.cpp  target.cpp
samples/setdll/: CMakeLists.txt
samples/simple/: CMakeLists.txt
samples/simple_foo/: CMakeLists.txt  foo.cpp  foo.h  payload.cpp  target.cpp
samples/withdll/: CMakeLists.txt
src/: CMakeLists.txt
